// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the default state for a collection module 1`] = `
Object {
  "currentPage": null,
  "initial": Object {},
  "items": Object {},
  "loading": false,
  "totalPages": null,
}
`;

exports[`returns the default state for a non-collection module 1`] = `
Object {
  "initial": Object {},
  "item": Object {},
  "loading": false,
}
`;
